test_suite/tests/ui/nightly/fail/help_attribute/duplicated_command_help.stderr
error: custom attribute panicked
 --> $DIR/duplicated_command_help.rs:4:1
  |
4 | #[command]
  | ^^^^^^^^^^
  |
  = help: message: multiple `#[command_help]` defined
